# bir_guardrail_experiments

./: .gitignore  Function_Calling_Analysis.ipynb  Function_Calling_Experiment.ipynb  IPIA_Analysis.ipynb  IPIA_Experiments.ipynb  README.md  pyproject.toml  utils.py
data/benchmark_datasets/: dynamo_benchmark.csv
data/formatted_results/: duo_guard_cm_results.csv  organized_results.json  shieldgemma_glider_cm_results.csv
data/raw_results/: JasperLS_deberta_v3_base_injection_context_email_results.json  JasperLS_deberta_v3_base_injection_context_table_results.json  JasperLS_deberta_v3_base_injection_prompt_benign_results.json  JasperLS_gelectra_base_injection_context_email_results.json  JasperLS_gelectra_base_injection_context_table_results.json  JasperLS_gelectra_base_injection_prompt_benign_results.json  ProtectAI_deberta_v3_base_prompt_injection_context_email_results.json  ProtectAI_deberta_v3_base_prompt_injection_context_table_results.json  ProtectAI_deberta_v3_base_prompt_injection_prompt_benign_results.json  ProtectAI_deberta_v3_base_prompt_injection_v2_context_email_results.json  ProtectAI_deberta_v3_base_prompt_injection_v2_context_table_results.json  ProtectAI_deberta_v3_base_prompt_injection_v2_prompt_benign_results.json  ProtectAI_deberta_v3_small_prompt_injection_v2_context_email_results.json  ProtectAI_deberta_v3_small_prompt_injection_v2_context_table_results.json  ProtectAI_deberta_v3_small_prompt_injection_v2_prompt_benign_results.json  dcarpintero_pangolin_guard_base_context_email_results.json  dcarpintero_pangolin_guard_base_context_table_results.json  (+13 more)
