[project]
name = "bir-guardrail-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.8"
dependencies = [
    "any-guardrail[all]>=0.2.2",
    "datasets",
    "huggingface-hub",
    "jupyterlab",
    "numpy",
    "pandas",
    "scikit-learn",
]
